# CameraViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cameraviewer.qss  vcpkg.json
camera/: CMakeLists.txt  basler_camera.cpp  camera.cpp  readme.md  virtual_camera.cpp
camera/API/: camera.hpp
camera/C_Wrapper/: CameraCWrapper.cpp  CameraCWrapper.h
camera/CameraManager/: cameramanager.hpp
camera/Loader/: loader.hpp
camera/cameras/basler/: CMakeLists.txt  basler_camera.cpp  basler_camera.h
camera/cameras/virtual/: CMakeLists.txt  virtual_camera.cpp  virtual_camera.h
camera/example_configurations/: single_camera.json
camera/include/: basler_camera.h  virtual_camera.h
dependencies/: CMakeLists.txt
dependencies/CameraManager/: CMakeLists.txt
docs/: _quarto.yml  docs.Rproj  index.qmd
docs/_site/: index.html
docs/_site/concepts/: index.html
docs/_site/developer/: index.html
docs/_site/user_guide/: index.html
docs/concepts/: index.qmd
docs/developer/: _metadata.yml  index.qmd
docs/site_libs/bootstrap/: bootstrap-8ea241a1766a3129914e7a59ac5729ec.min.css
docs/user_guide/: _metadata.yml  index.qmd
include/: basler_camera.h  camera.h  mainwindow.h  virtual_camera.h
src/: CMakeLists.txt  basler_camera.cpp  camera.cpp  cameraviewer.qrc  color_scheme.hpp  main.cpp  mainwindow.cpp  mainwindow.ui  virtual_camera.cpp
src/mainwindow/: mainwindow.cpp  mainwindow.h
